# claude

./: .gitignore  .prettierignore  AGENTS.md  CLAUDE.md  HANDOFF.md  HUMAN.md  LICENSE  README.md
context-tree/: Cargo.toml  README.md
context-tree/scripts/: check.sh  gen-demo-codebase.py
context-tree/src/: cli.rs  extract.rs  facts.rs  hash.rs  lib.rs  main.rs  minified.rs  path.rs  project.rs  zones.rs
context-tree/src/cmd/: at.rs  deps.rs  hooks.rs  map.rs  mod.rs  no_match.rs  notes.rs  refs.rs  show.rs  sig.rs  tree.rs
context-tree/src/hooks_templates/: posttooluse.txt  precommit.sh  prewarm.sh
context-tree/src/index/: mod.rs
context-tree/src/lang/: bash.rs  c.rs  cpp.rs  go.rs  haskell.rs  java.rs  kotlin.rs  mod.rs  ocaml.rs  python.rs  rust.rs  typescript.rs  zig.rs
context-tree/src/lsp/: client.rs  mod.rs
context-tree/src/mcp/: mod.rs
context-tree/src/notes/: anchor.rs  freshness.rs  mod.rs  reanchor.rs
context-tree/src/sync/: journal.rs  lock.rs  mod.rs
context-tree/src/vcs/: mod.rs
context-tree/tests/: bash.rs  c.rs  cli_version.rs  cpp.rs  ctxignore_overlay.rs  doc_conformance.rs  e2e.rs  go.rs  haskell.rs  hooks.rs  init.rs  integration.rs  java.rs  kotlin.rs  language_coverage.rs  lsp.rs  mcp.rs  minified.rs  notes.rs  ocaml.rs  python.rs  query.rs  query_edges.rs  reanchor.rs  rust.rs  show.rs  sync.rs  tree_files_mode.rs  tree_minified.rs  typescript.rs  zero_result_tails.rs  zig.rs  zones_config.rs  zones_filter.rs  zones_tagging.rs
context-tree/tests/e2e/: user_flow.rs
context-tree/tests/fixtures/demo-codebase/: README.md
(+2113 files in other folders)
