[package]
name = "context-tree"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ctx"
path = "src/main.rs"

[lib]
name = "context_tree"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.6.2", features = ["derive"] }
inventory = "0.3.24"
sha2 = "0.11.0"
tree-sitter = "0.26.11"
tree-sitter-language = "0.1.7"
tree-sitter-python = "0.25.0"

[dev-dependencies]
insta = "1.48.0"
tempfile = "3.27.0"
