[package]
name = "context-tree"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ctx"
path = "src/main.rs"

[lib]
name = "context_tree"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.6.2", features = ["derive"] }
inventory = "0.3.24"
sha2 = "0.11.0"
tree-sitter = "0.26.11"
tree-sitter-c = "0.24.2"
tree-sitter-cpp = "0.23.4"
tree-sitter-bash = "0.25.0"
tree-sitter-go = "0.25.0"
tree-sitter-haskell = "0.23.1"
tree-sitter-java = "0.23.5"
tree-sitter-javascript = "0.25.0"
tree-sitter-kotlin-ng = "1.1.0"
tree-sitter-language = "0.1.7"
tree-sitter-ocaml = "0.25.0"
tree-sitter-python = "0.25.0"
tree-sitter-rust = "0.24.2"
tree-sitter-typescript = "0.23.2"
tree-sitter-zig = "1.1.2"

[dev-dependencies]
insta = "1.48.0"
tempfile = "3.27.0"
